fix: disable horizontal scrolling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,5 +5,7 @@ body,
 #root {
   padding: 0;
   margin: 0;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow-x: hidden;
 }
